--- a/index.html
+++ b/index.html
@@ -1,11 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Blog</title>
 </head>
+
 <body>
-    
+
+
+
+
+
+
+
+
+
+    <footer>
+        <div class="Footerone">
+            <a href="Facebook">Facebook</a>
+            <a href="Instagram">Instagram</a>
+            <a href="Youtube">Youtube</a>
+        </div>
+        <div class="footertwo">
+            Conocenos!
+        </div>
+    </footer>
 </body>
+
 </html>
