--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Food Blog</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -12,7 +13,13 @@
 
 
 
-
+    <div>
+        <h1>¿Qué Buscas?</h1>
+        <form>
+            <input type="text">
+            <input type="submit" value="Buscar">
+        </form>
+    </div>
 
 
 
@@ -26,6 +33,8 @@
         <div class="footertwo">
             Conocenos!
         </div>
+        <br>
+        Javier Serrano Caballero &copy; 2023
     </footer>
 </body>
 
