--- a/index.html
+++ b/index.html
@@ -9,32 +9,194 @@
 </head>
 
 <body>
+    <header class="header">
+
+        <div class="left">
+            <h1>Javi´s Breakfast </h1>
+        </div>
+
+        <div class="right">
+            <h3>¿Qué Buscas?</h3>
+            <form>
+                <input type="text">
+                <input type="submit" value="Buscar">
+            </form>
+        </div>
+    </header>
+    <div class="generalcrecipe-container">
+        <br>
+        <div>
+            <h3>AREPAS VENEZOLANAS:</h3>
+            <p>https://www.recetasderechupete.com/arepas-venezolanas-con-relleno-la-reina-pepiada/8351/
+                <br>
+                ingredientes:
+                <br>
+                Para la masa de las arepas:
+                300 ml. de agua tibia
+                220 g. de harina de maíz precocida P.A.N. o similar
+                1/2 cucharada de postre de sal (4 gramos)
+            </p>
+        </div>
+        <br>
+        <div>
+            <h3>PISCA ANDINA:</h3>
+            <p>https://www.laylita.com/recetas/pisca-andina/
+
+                <br>
+                ingredientes:
+                <br>
+                4 tazas de leche líquida 1 l.
+                4 cucharadas de mantequilla con sal (de ser posible use mantequilla, no margarina)
+                3 tallos de cebollín 150 g.
+                4 papas medianas 400 g.
+                1 ramillete de cilantro
+                250 g. de queso blanco la receta original se hace con queso blanco ahumado
+                4 huevos
+                Sal al gusto
+            </p>
+        </div>
+        <br>
+        <div>
+            <h3>PANQUECAS:</h3>
+            <p>https://www.recetavenezolana.com/panquecas/
+
+                <br>
+                ingredientes:
+                <br>
+                1 taza de harina de trigo
+                2 huevos
+                2 tazas de leche líquida
+                ½ taza de mantequilla líquida
+                2 cucharadas de azúcar
+                ½ taza de aceite
+                300 g de queso rallado
+            </p>
+        </div>
+        <br>
+        <div>
+            <h3>TEQUEÑOS:</h3>
+            <p>https://www.bonviveur.es/recetas/tequenos
 
 
+                <br>
+                ingredientes:
+                <br>
+                175 g de harina de trigo
+                30 g de mantequilla fría
+                1 huevo M
+                35 g de agua
+                1 pizca de sal
+                200 g de queso blanco tipo llanero (en su defecto gouda) cortados en bastones de 2 cm de ancho y 8 cm de
+                largo
+                500 g de aceite para freír
+
+            </p>
+        </div>
+        <br>
+        <div>
+            <h3>EMPANADAS:</h3>
+            <p>https://www.bizcochosysancochos.com/2018/01/empanadas-venezolanas-harina-maiz.html
+
+                <br>
+                ingredientes:
+                <br>
+                1 1/2 taza (215 gramos) de harina de maíz precocida
+                2 cucharadas de harina de trigo para todo uso o maicena
+                1/4 cucharadita de sal
+                1 1/2 tazas de agua fría
 
 
-    <div>
-        <h1>¿Qué Buscas?</h1>
-        <form>
-            <input type="text">
-            <input type="submit" value="Buscar">
-        </form>
+            </p>
+        </div>
+        <br>
     </div>
+    <br>
+    <div>
+        <h3>PASTELES:</h3>
+        <p>https://www.196flavors.com/es/pastelitos-venezolanos/
+
+            <br>
+            ingredientes:
+            <br>
+            500 g de harina de trigo , tamizada
+            250 ml de agua (o más)
+            1 cucharadita de sal
+            1 bolsita de levadura en polvo
+            1 cucharada de aceite vegetal neutro (o margarina derretida)
+
+
+        </p>
+    </div>
+    <br>
+    </div>
+    <br>
+    <div>
+        <h3>GOLFEADOS::</h3>
+        <p>https://www.recetas-venezolanas.com/recetas/reposteria/golfeados-venezolanos
+
+
+            <br>
+            ingredientes:
+            <br>
+            1 cucharilla de Levadura
+
+            4 cucharas de Azúcar
+
+            1 cuchara de Mantequilla
+
+            2 cucharas de Sal
+
+            ½ kilogramo de Harina
+
+            2 tazas de Agua
+
+            1 Papelon
+
+            Mantequilla derretida
+
+            Queso rallado
 
 
 
 
+        </p>
+    </div>
+    <br>
+    <br>
+    <div>
+        <h3>CACHITOS::</h3>
+        <p>https://www.laylita.com/recetas/cachitos-de-jamon/
+
+
+
+            <br>
+            ingredientes:
+            <br>
+            4 ½ tazas de harina de trigo todo uso 500 g.
+1 ½ cucharadita de levadura en polvo 14 g.
+½ taza de mantequilla o margarina derretida 120 g.
+1 taza de agua tibia 240 ml, dividida en dos partes iguales
+3 cucharadas de leche en polvo
+½ taza de azúcar 85 g.
+1 huevo grande
+1 cucharadita de vainilla
+1 cucharadita de sal.
+        </p>
+    </div>
+    <br>
+    </div>
     <footer>
         <div class="Footerone">
             <a href="Facebook">Facebook</a>
             <a href="Instagram">Instagram</a>
             <a href="Youtube">Youtube</a>
         </div>
+        <br>
         <div class="footertwo">
             Conocenos!
         </div>
         <br>
-        Javier Serrano Caballero &copy; 2023
+        <h2 id="company"> Javier Serrano Caballero &copy; 2023 </h2>
     </footer>
 </body>
 
