--- a/home/home.html
+++ b/home/home.html
@@ -10,33 +10,11 @@
 
 <div>
   
-    <h1>hola   asdasdasd</h1>
+    <h1>HOME</h1>
+
 </div>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="home.html"></script>
+    
 </body>
 </html>
