--- a/index.html
+++ b/index.html
@@ -16,13 +16,12 @@
 
     <nav class="container-food">
         <ul>
-            <a href="#home/home">HOME</a>
-            <a href="#recipe/recipe">RECIPE</a>
-            <a href="#contacts/contacts">CONTACTS</a>
-            <a href="#user/user">USER</a>
+            <a class="item" href="#home/home">HOME</a>
+            <a class="item" href="#recipe/recipe">RECIPE</a>
+            <a class="item" href="#contacts/contacts">CONTACTS</a>
+            <a class="item" href="#user/user">USER</a>
         </ul>
     </nav>
-
 
     <div id="content">
 
@@ -31,7 +30,6 @@
 
         <section class="content">
 
-            <div id="subpage__container"></div>
 
             <!-- <article class="article">
                 <img src="Imagenes/Arepas.webp" width="400px">
@@ -168,12 +166,15 @@
 
     </div>
 
-    <div>
-        <footer>
-            Javier S.C. &COPY; 2023
-        </footer>
-    </div>
+    <footer class="footer">
+
+        <p class="footer-text">Javier S.C. &COPY; 2023</p>
+
+    </footer>
+
     <script src="javascript.js"></script>
+
 </body>
+
 
 </html>
