--- a/recipe/recipe.html
+++ b/recipe/recipe.html
@@ -11,12 +11,13 @@
 <body>
 
     <div id="content">
-
+        
         <br>
 
         <section class="content">
 
-            <div id="subpage__container"></div>
+            <h1>RECIPES</h1>
+    
 
             <article class="article">
                 <img src="Imagenes/Arepas.webp" width="400px">
@@ -138,7 +139,7 @@
                 <ul>
                     <ol>4 ½ tazas de harina de trigo todo uso 500 g. </ol>
                     <ol>1 ½ cucharadita de levadura en polvo 14 g.</ol>
-                    <ol>½ taza de mantequilla o margarina derretida 120 g</ol>
+                    <ol>½ taza de mantequilla o ma  rgarina derretida 120 g</ol>
                     <ol>1 taza de agua tibia 240 ml, dividida en dos partes iguales</ol>
                     <ol>3 cucharadas de leche en polvo </ol>
                     <ol>½ taza de azúcar 85 g.</ol>
@@ -153,10 +154,12 @@
         <aside>
             <h1>What are you looking for?</h1>
             <form id="search-form">
-                <input type="text" id="search-input" onsubmit="return-false;" placeholder="Search...">
-                <button type="submit">Search</button>
+                <input type="text" id="search-input" placeholder="Search...">
+                <!-- <button id="button-search-recipe" onclick="searchRecipe()" type="submit">Search</button> -->
+                <button id="button-search-recipe">Search</button>
             </form>
         </aside>
+
     </div>
 
     <script src="javascript.js"></script>
