--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog Jav's Breakfasts</title>
     <link rel="stylesheet" href="index.css">
+
 </head>
 
 <body>
@@ -14,32 +15,34 @@
         <h1>Jav's Breakfasts</h1>
     </header>
 
-    <nav class="container-food">
+    <nav class="container-nav-links">
         <ul>
-            <a class="item" href="#home/home">HOME</a>
-            <a class="item" href="#recipe/recipe">RECIPE</a>
-            <a class="item" href="#contacts/contacts">CONTACTS</a>
-            <a class="item" href="#user/user">USER</a>
+            <!-- <a class="item" href="#home/home">HOME</a> -->
+            <a class="item" href="#views/recipe">RECIPES</a>
+            <!-- <a class="item" href="#contacts/contacts">CONTACTS</a> -->
+            <a class="item" href="#views/admin">ADMIN</a>
         </ul>
     </nav>
 
+
+
     <div id="content">
-
-
-        <br>
+        Este es el index y está vacío
 
         <section class="content">
-
 
         </section>
 
     </div>
+
+    <div class="container-free">jav</div>
 
     <footer class="footer">
 
         <p class="footer-text">Javier S.C. &COPY; 2023</p>
 
     </footer>
+
 
     <script src="index.js"></script>
 
