--- a/index.html
+++ b/index.html
@@ -25,7 +25,6 @@
     </nav>
 
 
-
     <div id="content">
         Este es el index y está vacío
 
@@ -35,7 +34,7 @@
 
     </div>
 
-    <div class="container-free">jav</div>
+    <div class="container-free"></div>
 
     <footer class="footer">
 
