--- a/index.html
+++ b/index.html
@@ -4,48 +4,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Jav's Breakfasts</title>
-    <link rel="stylesheet" href="index.css">
-
+    <title>Document</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
-
     <header>
-        <h1>Jav's Breakfasts</h1>
+        <nav class="first-nav">
+
+            <h1>Jav's Breakfasts</h1>
+           
+        </nav>
     </header>
 
-    <nav class="container-nav-links">
+    <nav class="second-nav">
         <ul>
-            <!-- <a class="item" href="#home/home">HOME</a> -->
-            <a class="item" href="#views/recipe">RECIPES</a>
-            <!-- <a class="item" href="#contacts/contacts">CONTACTS</a> -->
-            <a class="item" href="#views/admin">ADMIN</a>
+
+            <li><a href="#gallery">RECIPE</a></li>
+            <li><a href="#admin">ADM</a></li>
+
         </ul>
     </nav>
 
-
-    <div id="content">
-        Este es el index y está vacío
-
-        <section class="content">
-
-        </section>
+    <div id="content" class="horizontal-center-content">
 
     </div>
 
-    <div class="container-free"></div>
 
-    <footer class="footer">
 
-        <p class="footer-text">Javier S.C. &COPY; 2023</p>
 
-    </footer>
 
 
     <script src="index.js"></script>
-
 </body>
-
 
 </html>
