--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header>
         <nav class="first-nav">
 
-            <h1>Jav's Breakfasts</h1>
+            <h1 id="text-nav">Jav's Breakfasts</h1>
            
         </nav>
     </header>
